frontend/kubernetes/k8s-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels: 
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ${REGISTRY_ADDRESS}/${REGISTRY_NAME}:${TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
