frontend/kubernetes/k8s-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: frontend.cluster
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
